feat: add getAllUsers method
