# back/internal/api/dto/auth.go
@@ -4,3 +4,14 @@ type AuthRequest struct {
 	Email    string `json:"email"`
 	Password string `json:"password"`
 }
+
+type UserResponse struct {
+	ID    uint   `json:"id"`
+	Email string `json:"email"`
+}
+
+type UserAdminResponse struct {
+	ID    uint   `json:"id"`
+	Email string `json:"email"`
+	Role  string `json:"role"`
+}
