# back/internal/api/middleware/auth.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	"strings"
 
+	"github.com/fvaiiii/habitFlow/back/internal/api/dto"
 	"github.com/fvaiiii/habitFlow/back/internal/auth"
 	"github.com/gin-gonic/gin"
 )
@@ -33,5 +34,26 @@ func AuthMiddleware() gin.HandlerFunc {
 
 		c.Next()
 
+	}
+}
+
+func AdminOnly() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		role, exists := c.Get("role")
+		if !exists {
+			c.AbortWithStatusJSON(401, dto.ErrorResponse{
+				Error: "unauthorized",
+			})
+			return
+		}
+
+		if role != "admin" {
+			c.AbortWithStatusJSON(403, dto.ErrorResponse{
+				Error: "forbidden",
+			})
+			return
+		}
+
+		c.Next()
 	}
 }
